examples/datalog/21_query_features/55_computed_projection.dl
% Test: Computed value in projection
% Expected: Project arithmetic result
% Category: 21_query_features
% Priority: P2 - Query features

.kg create test_computed_proj
.kg use test_computed_proj

+items[(1, 10, 5), (2, 20, 3)].

% Project computed total
with_total(Id, Total) :- items(Id, Price, Qty), Total = Price * Qty.

?- with_total(Id, T).

.kg use default
.kg drop test_computed_proj
